# codenames-sim

./: .gitignore  README.md  pyproject.toml
codenames_sim/: game_state.py
