[tool.poetry]
name = "codenames ai"
version = "0.0.1"
description = "screw around"
authors = ["Anthony Liu <tonyliu.30@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.15.0"
pydantic = "^1.8.1"
gensim = "^4.0.1"
python-Levenshtein = "^0.12.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.12"
jupyterlab-vim = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
